--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="TemplateData/style.css">
 
 
-    <script src="/sdk.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/classroom-googl-e/goo@main/sdk.js"></script>
 
 
   </head>
