--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="./style.css"/>
 <!-- Additional head modules -->
 <!-- Yandex Games SDK -->
-<script src="/sdk.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/classroom-googl-e/goo@main/sdk.js"></script>
 <style>
         /* Убираем выделение по нажатию клавиш */
         canvas:focus {
