--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
 <title>Counter-Terror GlobalStrike</title>
-<link rel="shortcut icon" href="TemplateData/favicon.ico"/>
-<link rel="stylesheet" href="TemplateData/style.css"/>
+<link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/classroom-googl-e/goo@main/TemplateData/favicon.ico"/>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/classroom-googl-e/goo@main/TemplateData/style.css"/>
 
 <style>
       /* Убираем выделение по нажатию клавиш */
@@ -38,7 +38,7 @@
 </div>
 <div id="loading-cover" style="display:none;">
 <div id="unity-loading-bar">
-<div id="unity-logo"><img src="logo.png"/></div>
+<div id="unity-logo"><img src="https://cdn.jsdelivr.net/gh/classroom-googl-e/goo@main/logo.png"/></div>
 <div id="unity-progress-bar-empty" style="display: none;">
 <div id="unity-progress-bar-full"></div>
 </div>
@@ -47,7 +47,7 @@
 </div>
 <script>
     const hideFullScreenButton = "";
-    const buildUrl = "Build";
+    const buildUrl = "https://cdn.jsdelivr.net/gh/classroom-googl-e/goo@main/Build/";
     const loaderUrl = buildUrl + "/webgl.loader.js";
     const config = {
         dataUrl: buildUrl + "/686ca15cb73e415ffc47df163c1537bf.data.unityweb",
@@ -87,7 +87,7 @@
     }
 
     var backgroundUnity = "url('" + buildUrl + "/') center / cover";
-    canvas.style.background = "url('background.jpg') center / cover";
+    canvas.style.background = "url('https://cdn.jsdelivr.net/gh/classroom-googl-e/goo@main/background.jpg') center / cover";
 
     loadingCover.style.display = "";
 
